--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="The 1st International Workshop on Building and Simulation(BAS2024):Multi-scale Modeling and Simulation">
 
 
-    <title>BAS 2024</title>
+    <title>BAS 2024 NSF Workshop</title>
     <link rel="stylesheet" href="assets/tether/tether.min.css">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -46,7 +46,7 @@
                 <div class="navbar-brand">
                     <a class="navbar-brand" href="#">
                         <img src="assets/images/logo1.png" alt="..." height="100"> </a>  
-                        <!-- <img src="assets/images/nsf.jpg" alt="..." height="100"> </a>   -->
+                        <img src="assets/images/nsf.jpg" alt="..." height="100"> </a>  
                     <!-- <span class="navbar-caption-wrap"><a class="navbar-caption text-danger display-7"
                             href="index.html">BAS 2024</a></span>    -->
        
