--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </div>
     </div>
 
-    <!-- <section class="timeline2 cid-sBnEonYIaV" id="content-contact">
+    <section class="timeline2 cid-sBnEonYIaV" id="content-contact">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-12 col-lg-12">
@@ -221,7 +221,7 @@
             </div>
 
         </div>
-    </section> -->
+    </section>
 
 
     <section class="footer3 cid-sC4B4jbyi0" once="footers" id="footer3-t">
