--- a/index.html
+++ b/index.html
@@ -64,12 +64,14 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
                         <li class="nav-item"><a class="nav-link link text-danger display-4"
+                            href="https://bas2024.org/">HOME</a></li>
+                        <li class="nav-item"><a class="nav-link link text-danger display-4"
                                 href="index.html#Content-About">
                                 ABOUT</a></li>                           
                         <li class="nav-item"><a class="nav-link link text-danger text-primary display-4"
                                 href="index.html#Content-Speakers">INVITED SPEAKER</a></li>
-                        <!-- <li class="nav-item"><a class="nav-link link text-danger display-4"
-                                href="index.html#content-contact">CONTACT</a></li> -->
+                        <li class="nav-item"><a class="nav-link link text-danger display-4"
+                                href="https://bas2024.org/">HOME</a></li>
                     </ul>
 
 
