--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
                             href="https://bas2024.org/">HOME</a></li>
                         <li class="nav-item"><a class="nav-link link text-danger display-4"
                                 href="index.html#Content-About">
-                                ABOUT</a></li>                           
+                                ABOUT</a></li> 
+                        <li class="nav-item"><a class="nav-link link text-danger display-4"
+                                href="index.html#Content-schedules">
+                                SCHEDULES</a></li>                         
                         <li class="nav-item"><a class="nav-link link text-danger text-primary display-4"
                                 href="index.html#Content-Speakers">INVITED SPEAKER</a></li>
 
