--- a/index.html
+++ b/index.html
@@ -132,14 +132,13 @@
         </div>
     </section>
 
-    <section class="content5 cid-sBnycRFU73" id="Content-Schedules">
+    <section class="content5 cid-sBnycRFU73" id="Content-schedules">
 
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-12 col-lg-10">
-
                     <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-2"><strong>NSF Workshop Schedules</strong></h4>
-                    <p class="mbr-text mbr-fonts-style display-7" style="text-align: justify;">
+                    <p class=""row justify-content-center"" style="text-align: justify;">
                        <strong>
                        To be Updated</strong>
           
