--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
                         
                         <br>
                         <br>
-                        The NSF Workshop on the Implication of Urban Scale Occupant Behavior for Resilient Building Design, Operation, and Policy Making is a
-                         groundbreaking event designed to catalyze interdisciplinary dialogue and innovation at the intersection of urban planning, behavioral science, 
-                         and resilience studies. This workshop aims to bring together a diverse group of leading academics, industry experts, and policy makers to explore the 
-                         critical role of occupant behavior in shaping the resilience of urban buildings and communities. By focusing on the dynamic interactions between people 
-                         and the built environment, the event seeks to uncover new insights and strategies for creating more sustainable, adaptable, and occupant-friendly urban spaces. 
-                         With a roster of esteemed participants and a commitment to fostering collaborative solutions, this workshop promises to be a pivotal moment for advancing our 
-                         understanding and implementation of resilient urban design and policy.
+                        The objective of this workshop is to identify the research gaps in existing urban scale occupant behavior research including what the obstacles are and what is needed from NSF, 
+                        and the identification of future research directions. The list of topics will be discussed include: 
+                        <div>(1) What are the modeling requirements of occupant behavior at a community level? </div>
+                        <div>(2) What data sources have been used in other domains that could potentially enhance the modeling capabilities for current building science applications? </div>
+                       <div> (3) What are the new modeling methods of occupant behavior at a community level? and </div>
+                            <div> (4) What are the potential future research directions for building design, operation, and policies at a community level, 
+                        with enhanced data sources and modeling methods from other domains.</div>
 
            
                     </p>
