--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <div class="container-fluid" c>
                 <div class="navbar-brand">
                     <a class="navbar-brand" href="#">
-                        <img src="assets/images/logo1.png" alt="..." height="100"> </a>  
-                        <img src="assets/images/nsf.jpg" alt="..." height="100"> </a>  
+                        <img src="assets/images/logoall.jpg" alt="..." height="100"> </a>  
+    
                     <!-- <span class="navbar-caption-wrap"><a class="navbar-caption text-danger display-7"
                             href="index.html">BAS 2024</a></span>    -->
        
