--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     <section class="content5 cid-sBnycRFU73" id="Content-About">
 
-        <div class="container" style="border: 3px dotted orange">
+        <div class="container" >
             <div class="row justify-content-center">
                 <div class="col-md-12 col-lg-10">
 
@@ -134,7 +134,7 @@
 
     <section class="content5 cid-sBnycRFU73" id="Content-schedules">
 
-        <div class="container"style="border: 3px dotted GRAY">
+        <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-12 col-lg-10">
                     <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-2"><strong>NSF Workshop Schedules</strong></h4>
@@ -149,7 +149,7 @@
     </section>
 
     <section class="image1 cid-sMrBEe5aaJ" id="Content-Speakers">
-        <div class="container"style="border: 3px dotted orange" >
+        <div class="container">
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2"><strong> Workshop Chair
                      &nbsp;</strong><br><strong><br></strong></h3>
                         <!-- <p class="mbr-text mbr-fonts-style display-7" style="text-align: justify;">
@@ -192,7 +192,7 @@
             <br><br><br><br>
         </div>
         <br><br><br><br>
-        <div class="container"style="border: 3px dotted GRAY" '>
+        <div class="container">
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2"><strong> Invited Keynote
                     Speaker &nbsp;</strong><br><strong><br></strong></h3>
                         <!-- <p class="mbr-text mbr-fonts-style display-7" style="text-align: justify;">
@@ -235,7 +235,7 @@
             <br><br><br><br>
         </div>
         <br><br><br><br>
-        <div class="container"style="border: 3px dotted orange" >
+        <div class="container" >
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-5"><strong> Invited Panel1
                     Speakers &nbsp;</h3>
                     <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-6 "><strong> Panel1: Modeling occupant behavior at a community level &nbsp;</strong><br><strong><br></strong></h3>
@@ -284,7 +284,7 @@
         </div>
 
         <br><br><br><br>
-        <div class="container"style="border: 3px dotted GRAY" >
+        <div class="container" >
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-5"><strong> Invited Panel2
                     Speakers &nbsp;</h3>
                     <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-6 "><strong> Panel 2: Data sources and human mobility modeling approaches
@@ -352,7 +352,7 @@
         </div>
 
         <p style="line-height: 500px;">   </p>
-        <div class="container"style="border: 3px dotted orange" >
+        <div class="container" >
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-5"><strong> Invited Panel3
                     Speakers &nbsp;</h3>
                     <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-6 "><strong> Panel 3: Applications in resilient building design, operation and policy making
