--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                 </div>
             </div>
             <p><p><p>
-            <div class="row align-items-center">
+<!--             <div class="row align-items-center">
                 <div class="col-6 col-lg-3">
                     <div class="image-wrapper">
                          <img src="assets/images/chien.jpg" alt="Doctor Tianzhen Hong"> 
@@ -415,7 +415,7 @@
                         </p> 
                     </div>
                 </div>
-            </div>
+            </div> -->
             <p><p><p>
             <div class="row align-items-center">
                 <div class="col-6 col-lg-3">
