--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                             <br> Associate Director of Grid-Interactive Efficient Buildings,  New York State’s Center of Excellence for Environmental and Energy Systems<br>
                             Associate Professor, Mechanical and Aerospace Engineering, College of Engineering and Computer Science, Syracuse University, USA<br>
                             
-                            <strong>Topic: to be updated</strong><br>
+<!--                             <strong>Topic: to be updated</strong><br> -->
                             <!-- The emergence of interconnected cyber-physical systems and sensor/actuator networks has
                             given rise to advanced automation applications, where a large amount of sensor data is
                             collected and processed in order to make suitable real-time decisions and to achieve the
