--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                     Speakers &nbsp;</h3>
                     <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-6 "><strong> Panel 2: Data sources and human mobility modeling approaches
                         &nbsp;</strong><br><strong><br></strong></h3>
-                        <img src="assets/images/nsf_P2.png" alt="sch"> 
+                        <img src="assets/images/nsf_p2.png" alt="sch"> 
             <!-- <div class="row align-items-center">
                 <div class="col-6 col-lg-3">
                     <div class="image-wrapper">
