--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
                 <div class="col-md-12 col-lg-10">
                     <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-2"><strong>NSF Workshop Schedules</strong></h4>
                     <p class=""row justify-content-center"" style="text-align: justify;">
-                        <img src="assets/images/SCH131.png" alt="sch"> 
-                        <img src="assets/images/SCH132.png" alt="sch"> 
+                        <img src="assets/images/NSF131.png" alt="sch"> 
+                        <img src="assets/images/NSF132.png" alt="sch"> 
 
           
                     </p>
