--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@
                 <div class="col-md-12 col-lg-10">
                     <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-2"><strong>NSF Workshop Photos</strong></h4>
                     <p class=""row justify-content-center"" style="text-align: justify;">
-
+                        <img src="assets/images/Campus_1.png" alt="sch"> 
+                                                <br>
                         <img src="assets/images/p1.jpg" alt="sch"> 
                         <br>
                         <img src="assets/images/p2.jpg" alt="sch"> 
                         <br>
                         <img src="assets/images/p3.jpg" alt="sch"> 
                         <br>
-                        <img src="assets/images/p4.jpg" alt="sch"> 
 
           
                     </p>
