--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
                         <br>
                         <img src="assets/images/p3.jpg" alt="sch"> 
                         <br>
-
+                        <img src="assets/images/p4.jpg" alt="sch"> 
+                        <br>
           
                     </p>
                 </div>
