--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                     <br>
                     <br>
                     <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-2"><strong>NSF Workshop Outcome</strong></h4>
+                    <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5"><A HREF="assets/FinalReport.pdf"> See full final report here</A></h4>
                     <p class="mbr-text mbr-fonts-style display-7" style="text-align: justify;">
 
                         <div> "This Project Outcomes Report for the General Public is displayed verbatim as submitted by the Principal Investigator (PI) for this award. Any opinions, findings, and conclusions or recommendations expressed in this Report are those of the PI and do not necessarily reflect the views of the National Science Foundation; NSF has not approved or endorsed its content."
